--- a/poo/css/feed.css
+++ b/poo/css/feed.css
@@ -58,6 +58,12 @@ body{
     font-size: 18px;
     cursor: pointer;
     margin: 20px;
+    transform: scale(1);
+    transition: transform 0.5s;
+}
+.cabecalho-menu:hover
+{
+    transform:scale(1.1)
 }
 
 .voltar
@@ -75,15 +81,19 @@ body{
     cursor: pointer;
     position: absolute;
     left: 100px;
+    transform: scale(1);
+    transition: transform 0.5s;
 }
 
 .voltar:hover{
-    background-color: #edbb15;
+    background-color: #ffc60b;
+    transform:scale(1.1)
+
 }
 
 .conteudo
  {
-    margin-bottom: auto;
+    margin-bottom: 100px;
     border-top: solid 0.4px #ffffff;
  }
 
@@ -102,54 +112,58 @@ body{
     margin-left: 44%;
  }
 
-.container
-{
-    display: flex;
-    width: 100%;
-    min-height: 100vh;
-    align-items: center ;
-    justify-content: center;
+ .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    justify-items: center;
+    align-items: center;
 
 }
 
-.container-imagem
-{
-   position: relative;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   width: 600px;
-}
-
-.slider
-{
-    opacity: 0;
-    transition: opacity .2s;
-    position: absolute;
-    width: 100%;
-    border-radius: 10px;
-}
-
-.on 
-{
-    opacity: 1;
-}
-
-#prev-button, #next-button
-{
-    width: 30px;
-    height: 30px;
-    border: none;
-    background-color: transparent ;
+.card {
+    width: 200px;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transform: scale(1);
+    transition: transform 0.5s;
     cursor: pointer;
+    padding: 30px;
+   
 }
 
-#prev-button img, #next-button img
+
+.card:hover
 {
-        width: 100%;
-        height: 100%;
+    transform:scale(1.4);
+
 }
 
+.card img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.card p {
+    margin-top: 10px;
+    font-size: 14px;
+    font-family: 'Righteous', cursive;
+    color: #ffffff;
+
+}
+.card .additional-info {
+    display: none;
+}
+
+.card .show-info {
+    cursor: pointer;
+    color: #ffffff;
+    text-decoration: underline;
+}
 .me-adote
 {
  
@@ -167,7 +181,7 @@ body{
     color: #ffffff;
     cursor: pointer;
     margin:  auto;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
    
 }
 
@@ -191,9 +205,4 @@ body{
     flex-direction: column;
     align-items: center;
 
-}
-.logo-rodape{
-    height: 48px;
-    display: block;
-    margin: 0 auto;
 }
