--- a/poo/css/cadastro.css
+++ b/poo/css/cadastro.css
@@ -11,16 +11,23 @@
 
 body{
     font-size: 100%;
-    background: linear-gradient(68.15deg, #EECC60, #FB6C34);
-
+    background: #E8C2DB;
  }
 
-
- .logo
+ body::-webkit-scrollbar
  {
-    height: 60px;
+    width: 12px;
  }
-
+ body::-webkit-scrollbar-track
+ {
+    background: #E8C2DB;
+ }
+ body::-webkit-scrollbar-thumb
+ {
+    background-color: #FFF7EB;
+    border-radius: 10px;
+    border: 2px solid #FFF7EB ;
+ }
 
  .cabecalho{
     display: flex;
@@ -28,6 +35,11 @@ body{
     align-items: center;
     justify-content: space-around;
     padding: 24px;
+ }
+
+ .logo
+ {
+    height: 60px;
  }
 
  .navegacao
@@ -38,7 +50,7 @@ body{
 .cabecalho-menu
 {
     font-family: 'Sarala', sans-serif;
-    color: #ffffff		;
+    color: #627ABD		;
     font-weight: 400px;
     font-size: 18px;
     cursor: pointer;
@@ -47,7 +59,7 @@ body{
 
 .voltar
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -63,8 +75,9 @@ body{
 }
 
 .voltar:hover{
-    background-color: #edbb15;
+    background-color: #93AAE8;
 }
+
 .conteudo
  {
     margin-bottom: 190px;
@@ -74,7 +87,7 @@ body{
  #titulo-principal
  {
     font-family: 'Sarala', sans-serif;
-    color: #ffffff;
+    color: #627ABD;
     margin-left: 15%;
  }
 
@@ -101,7 +114,7 @@ body{
 
 .botao
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 100px;
     height: 50px;
     border: none;
@@ -117,7 +130,7 @@ body{
 
 .botao:hover
 {
-    background-color: #edbb15;
+    background-color: #93AAE8;
 }
 
 input,textarea,select
@@ -142,18 +155,15 @@ input,textarea,select
     margin-right: 1em;
 }
 
-.campo input[type="text"],.campo input[type="email"],.campo sekect, .campo textarea{
+.campo input[type="text"],.campo input[type="email"], .campo input[type="password"]{
     padding: 0.2em;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.096);
     display: block;
 }
 
-.campo select option{
-    padding-right: 1em;
 
-}
 
-.campo input:focus, .campo select:focus , .campo textarea:focus
+.campo input:focus
 {
     background: #ffff;
 }
@@ -169,12 +179,12 @@ input,textarea,select
 .rodape
 {
     height: auto;
-    border-top: 0.4px solid #ffffff;
+    border-top: 0.4px solid #627ABD;
     padding: 32px;
 }
 
 .desenvolvido{
-    color: #ffffff;
+    color: #627ABD;
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
     font-size: 10px;
@@ -183,9 +193,4 @@ input,textarea,select
     flex-direction: column;
     align-items: center;
 
-}
-.logo-rodape{
-    height: 40px;
-    display: block;
-    margin: 0 auto;
 }
