--- a/poo/css/adote.css
+++ b/poo/css/adote.css
@@ -11,16 +11,23 @@
 
 body{
     font-size: 100%;
-    background: linear-gradient(100deg, #EECC60, #FB6C34);
-
+    background: #E8C2DB;
  }
 
-
- .logo
+ body::-webkit-scrollbar
  {
-    height: 60px;
+    width: 12px;
  }
-
+ body::-webkit-scrollbar-track
+ {
+    background: #E8C2DB;
+ }
+ body::-webkit-scrollbar-thumb
+ {
+    background-color: #FFF7EB;
+    border-radius: 10px;
+    border: 2px solid #FFF7EB ;
+ }
 
  .cabecalho{
     display: flex;
@@ -28,6 +35,11 @@ body{
     align-items: center;
     justify-content: space-around;
     padding: 24px;
+ }
+
+ .logo
+ {
+    height: 60px;
  }
 
  .navegacao
@@ -38,7 +50,7 @@ body{
 .cabecalho-menu
 {
     font-family: 'Sarala', sans-serif;
-    color: #ffffff		;
+    color: #627ABD		;
     font-weight: 400px;
     font-size: 18px;
     cursor: pointer;
@@ -47,7 +59,7 @@ body{
 
 .voltar
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -62,28 +74,28 @@ body{
     left: 100px;
 }
 
-.voltar:hover
-{
-    background-color: #edbb15;
+.voltar:hover{
+    background-color: #93AAE8;
 }
+
 .conteudo
  {
-    margin-bottom: 25vh;
-    border-top: solid 0.4px #ffffff;
+    margin-bottom: 30vh;
+    border-top: solid 0.4px #627ABD;
  }
 
  #titulo-principal
  {
     font-family: 'Sarala', sans-serif;
-    color: #ffffff;
-    margin-left: 10%;
+    color: #627ABD;
+    margin-left: 15%;
  }
 
  #subtitulo
  {
     font-family: 'Righteous', cursive;
     color: #ffffff;
-    margin-left: 10%;
+    margin-left: 15%;
  }
 
  .fieldset
@@ -95,14 +107,14 @@ body{
 {
     font-family: 'Sarala', sans-serif;
     color: #ffffff;
-    margin-left: 15%;
+    margin-left: 16%;
     margin-top: 2%;
     justify-content: center;
 }
 
 .botao
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 100px;
     height: 50px;
     border: none;
@@ -115,8 +127,9 @@ body{
     cursor: pointer;
 }
 
-.botao:hover{
-    background-color: #edbb15;
+.botao:hover
+{
+    background-color: #93AAE8;
 }
 
 input,textarea,select
@@ -126,53 +139,74 @@ input,textarea,select
 
 .campo
 {
-    margin-bottom: 1em;
+    margin-bottom: 4em;
 
 }
 
 .campo label{
-    margin-bottom: 0.2em;
+    margin-bottom: 0.4em;
     color: #ffffff;
     display: block;
 }
 
 .fieldset .grupo .campo{
-    float: left;
-    margin-right: 1em;
+    float: center;
+    margin-right: 30em;
 }
 
-.campo input[type="text"],.campo input[type="email"],.campo sekect, .campo textarea{
-    padding: 0.2em;
+.campo input[type="text"],.campo input[type="password"]
+{
+    padding: 0.3em;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.096);
-    display: block;
+    display: inline-block;
 }
 
-.campo select option{
-    padding-right: 1em;
 
-}
-
-.campo input:focus, .campo select:focus , .campo textarea:focus
+.campo input:focus
 {
     background: #ffff;
 }
 
 
+.cadastroo
+{
+    text-decoration: none;
+    font-family: 'Sarala', sans-serif;
+    color: #ffffff;
+    display: flex;
+    font-size: 15px;
+    margin: auto;
+    margin-bottom: 9px;
+    padding-top: 20px;
+
+}
+
+.esqueceu
+{
+    text-decoration: none;
+    font-family: 'Sarala', sans-serif;
+    color: #ffffff;
+    font-size: 15px;
+    margin: auto;
+}
+
 .img-logo-projeto
 {
     position: absolute;
     right: 100px;
-    height: 410px;
+    height: 330px;
     padding-top: 40px;
 }
 .rodape
 {
-    border-top: 0.4px solid #ffffff;
-    padding: 32px;
+    height: auto;
+    margin-top: 30px;
+    border-top: 0.4px solid #627ABD;
+    padding: 50px;
 }
 
 .desenvolvido{
-    color: #ffffff;
+    color: #627ABD;
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
     font-size: 10px;
@@ -180,9 +214,4 @@ input,textarea,select
     flex-direction: column;
     align-items: center;
 
-}
-.logo-rodape{
-    height: 48px;
-    display: block;
-    margin: 0 auto;
 }
