--- a/poo/css/sobre.css
+++ b/poo/css/sobre.css
@@ -6,11 +6,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: none;
 }
 
 body{
     font-size: 100%;
-    background: linear-gradient(68.15deg, #EECC60, #FB6C34);
+    background: #E8C2DB;
  }
 
  body::-webkit-scrollbar
@@ -19,13 +20,13 @@ body{
  }
  body::-webkit-scrollbar-track
  {
-    background: #FB6C34;
+    background: #E8C2DB;
  }
  body::-webkit-scrollbar-thumb
  {
-    background-color: #EECC60;
+    background-color: #FFF7EB;
     border-radius: 10px;
-    border: 2px solid #EECC60 ;
+    border: 2px solid #FFF7EB ;
  }
 
  .cabecalho{
@@ -49,7 +50,7 @@ body{
 .cabecalho-menu
 {
     font-family: 'Sarala', sans-serif;
-    color: #ffffff		;
+    color: #627ABD		;
     font-weight: 400px;
     font-size: 18px;
     cursor: pointer;
@@ -58,7 +59,7 @@ body{
 
 .voltar
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -74,13 +75,13 @@ body{
 }
 
 .voltar:hover{
-    background-color: #edbb15;
+    background-color: #93AAE8;
 }
 
 .conteudo
  {
     margin-bottom: 48px;
-    border-top: solid 0.4px #ffffff;
+    border-top: solid 0.4px #627ABD;
  }
 
  .conteudo-principal
@@ -101,7 +102,7 @@ body{
     font-family: 'Righteous', cursive;
     font-weight: 400px;
     font-size: 64px;
-    color:#ffffff;
+    color: #627ABD;
     margin: 20px;
 }
 .conteudo-principal-escrito-subtitulo
@@ -115,7 +116,7 @@ body{
 .texto-principal{
     font-family: 'Sarala', sans-serif;
     font-weight: 400px;
-    font-size: 18px;
+    font-size: 25px;
     line-height: 30px;
     padding: 20px;
     margin: 20px;
@@ -162,12 +163,12 @@ body{
 .conteudo-secundario-titulo
 {
 
-    border-top: 0.4px solid #ffffff;
+    border-top: 0.4px solid #627ABD;
     padding-top: 48px;
     font-family: 'Righteous', cursive;
     font-weight: 400px;
     font-size: 24px;
-    color: #ffffff;
+    color: #627ABD;
     margin-bottom: 16px;
 }
 
@@ -180,12 +181,12 @@ body{
     align-items: center;
     gap:24px;
     margin-top: 48px;
-    border-top: 0.4px solid #ffffff;
+    border-top: 0.4px solid #627ABD;
     padding: 32px;
 }
 
 .desenvolvido{
-    color: #ffffff;
+    color: #627ABD;
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
     font-size: 10px;
@@ -193,9 +194,4 @@ body{
     flex-direction: column;
     align-items: center;
 
-}
-.logo-rodape{
-    height: 48px;
-    display: block;
-    margin: 0 auto;
 }
