--- a/poo/css2/formParaAdotar.css
+++ b/poo/css2/formParaAdotar.css
@@ -1,42 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala&display=swap');
 
-*
-{
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    border: none;
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   text-decoration: none;
+   border: none;
 }
 
 body{
-    font-size: 100%;
-    background: linear-gradient(68.15deg, #EECC60, #FB6C34);
-
- }
-
-
- .logo
- {
-    height: 60px;
- }
-
-
-
-/* .file
-{
-    padding: 4px;
-    width: 200px;
-    padding-bottom: 3px;
-    background-color: #EECC60;
-    color: #FFF;
-    text-align: center;
-    display: block;
-    margin-top: 10px;
-    cursor: pointer;
-    border-radius: 25px;
+   font-size: 100%;
+   background: #E8C2DB;
 }
- */
+
+
+body::-webkit-scrollbar
+{
+   width: 12px;
+}
+body::-webkit-scrollbar-track
+{
+   background: #E8C2DB;
+}
+body::-webkit-scrollbar-thumb
+{
+   background-color: #FFF7EB;
+   border-radius: 10px;
+   border: 2px solid #FFF7EB ;
+}
+
+
+.cabecalho{
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-around;
+   padding: 24px;
+}
+
+.logo
+{
+   height: 60px;
+   border-radius: 100%;
+}
+
+.navegacao
+{
+   display: flex;
+   gap: 32px;
+
+}
+
+
+.cabecalho-menu{
+   font-family: 'Sarala', sans-serif;
+   color: #627ABD		;
+   font-weight: 400px;
+   font-size: 18px;
+   cursor: pointer;
+   transform: scale(1);
+   transition: transform 0.5s;
+}
+.cabecalho-menu:hover
+{
+  transform:scale(1.1)
+
+}
+
+.sair
+{
+    background-color: #627ABD;
+    width: 80px;
+    height: 40px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.096);
+    border-radius: 25px;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400px;
+    font-size: 15px;
+    color: #ffffff;
+    cursor: pointer;
+    position: absolute;
+    right: 100px;
+}
+
+
+.sair:hover
+{
+    background-color: #93AAE8 ;
+}
+
  .cabecalho{
     display: flex;
     flex-direction: row;
@@ -53,32 +106,16 @@ body{
 .cabecalho-menu
 {
     font-family: 'Sarala', sans-serif;
-    color: #ffffff		;
+    color: #627ABD		;
     font-weight: 400px;
     font-size: 18px;
     cursor: pointer;
     margin: 20px;
 }
 
-.sair
-{
-    background-color: #EECC60;
-    width: 80px;
-    height: 40px;
-    border: none;
-    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.096);
-    border-radius: 25px;
-    font-family: 'Sarala', sans-serif;
-    font-weight: 400px;
-    font-size: 15px;
-    color: #ffffff;
-    cursor: pointer;
-    position: absolute;
-    right: 100px;
-}
 .voltar
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -95,12 +132,13 @@ body{
 
 .voltar:hover
 {
-    background-color: #edbb15;
+    background-color: #93AAE8;
 }
+
 .conteudo
  {
-    margin-bottom: 310px;
-    border-top: solid 0.4px #ffffff;
+    margin-bottom: 190px;
+    border-top: solid 0.4px #627ABD;
  }
 
  #titulo-principal
@@ -131,36 +169,21 @@ body{
     justify-content: center;
 }
 
-.botao
-{
-    background-color: #EECC60;
-    width: 100px;
-    height: 50px;
-    border: none;
-    box-shadow: 4px 5px 4px rgba(0,0,0,0.096);
-    border-radius: 25px;
-    font-family: 'Sarala', sans-serif;
-    font-weight: 400px;
-    font-size: 20px;
-    color: #ffffff;
-    cursor: pointer;
-}
 
-.botao:hover
-{
-    background-color: #edbb15;
-}
 
-input,textarea,select
+input
 {
     border-radius: 5px;
 }
+
+
 
 .campo
 {
     margin-bottom: 1em;
 
 }
+
 
 .campo label{
     margin-bottom: 0.2em;
@@ -173,63 +196,59 @@ input,textarea,select
     margin-right: 1em;
 }
 
-
-.campo input[type="file"]
-{
-    display: none;
-}
-
-label [for=arquivo]
-{
-    padding: 20px 10px;
-    width: 200px;
-    background-color: #333;
-    color: #FFF;
-    text-transform: uppercase;
-    text-align: center;
-    display: block;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.campo input[type="text"],.campo input[type="email"] {
+.campo input[type="text"],.campo input[type="email"], input[type="file"]{
     padding: 0.2em;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.096);
     display: block;
 }
 
-.campo input[type="file"]
-{
-    padding: 0.2em;
-    display: block;
-}
 
-.campo select option{
-    padding-right: 1em;
-
-}
-
-.campo input:focus, .campo select:focus , .campo textarea:focus
+.campo input:focus
 {
     background: #ffff;
 }
 
+.botao
+{
+    background-color: #627ABD;
+    width: 100px;
+    height: 50px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0,0,0,0.096);
+    border-radius: 25px;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400px;
+    font-size: 20px;
+    color: #ffffff;
+    cursor: pointer;
+    margin-top: 25px;
+}
+input[type="file"] {
+    display: none;
+}
+
+
+
+.botao:hover
+{
+    background-color: #93AAE8;
+}
 
 .img-logo-projeto
 {
     position: absolute;
     right: 100px;
-    height: 310px;
+    height: 430px;
     padding-top: 40px;
 }
 .rodape
 {
-    border-top: 0.4px solid #ffffff;
+    border-top: 0.4px solid #627ABD;
     padding: 32px;
 }
 
 .desenvolvido{
-    color: #ffffff;
+    color: #627ABD;
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
     font-size: 10px;
@@ -237,9 +256,4 @@ label [for=arquivo]
     flex-direction: column;
     align-items: center;
 
-}
-.logo-rodape{
-    height: 48px;
-    display: block;
-    margin: 0 auto;
 }
