--- a/poo/css2/paraparte.css
+++ b/poo/css2/paraparte.css
@@ -1,44 +1,75 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala&display=swap');
 
-*
-{
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    border: none;
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   text-decoration: none;
+   border: none;
 }
 
 body{
-    font-size: 100%;
-    background: linear-gradient(68.15deg, #EECC60, #FB6C34);
-
- }
- body::-webkit-scrollbar
- {
-    width: 12px;
- }
- body::-webkit-scrollbar-track
- {
-    background: #FB6C34;
- }
- body::-webkit-scrollbar-thumb
- {
-    background-color: #EECC60;
-    border-radius: 10px;
-    border: 2px solid #EECC60 ;
- }
+   font-size: 100%;
+   background: #E8C2DB;
+}
 
 
-
- .logo
- {
-    height: 60px;
- }
-
- .sair
+body::-webkit-scrollbar
 {
-    background-color: #EECC60;
+   width: 12px;
+}
+body::-webkit-scrollbar-track
+{
+   background: #E8C2DB;
+}
+body::-webkit-scrollbar-thumb
+{
+   background-color: #FFF7EB;
+   border-radius: 10px;
+   border: 2px solid #FFF7EB ;
+}
+
+
+.cabecalho{
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-around;
+   padding: 24px;
+}
+
+.logo
+{
+   height: 60px;
+   border-radius: 100%;
+}
+
+.navegacao
+{
+   display: flex;
+   gap: 32px;
+
+}
+
+
+.cabecalho-menu{
+   font-family: 'Sarala', sans-serif;
+   color: #627ABD		;
+   font-weight: 400px;
+   font-size: 18px;
+   cursor: pointer;
+   transform: scale(1);
+   transition: transform 0.5s;
+}
+.cabecalho-menu:hover
+{
+  transform:scale(1.1)
+
+}
+
+.sair
+{
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -53,9 +84,10 @@ body{
     right: 100px;
 }
 
+
 .sair:hover
 {
-    background-color: #edbb15;
+    background-color: #93AAE8 ;
 }
 
  .cabecalho{
@@ -74,7 +106,7 @@ body{
 .cabecalho-menu
 {
     font-family: 'Sarala', sans-serif;
-    color: #ffffff		;
+    color: #627ABD		;
     font-weight: 400px;
     font-size: 18px;
     cursor: pointer;
@@ -83,7 +115,7 @@ body{
 
 .voltar
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -100,13 +132,13 @@ body{
 
 .voltar:hover
 {
-    background-color: #edbb15;
+    background-color: #93AAE8;
 }
 
 .conteudo
  {
     margin-bottom: 190px;
-    border-top: solid 0.4px #ffffff;
+    border-top: solid 0.4px #627ABD;
  }
 
  #titulo-principal
@@ -137,25 +169,7 @@ body{
     justify-content: center;
 }
 
-.botao
-{
-    background-color: #EECC60;
-    width: 100px;
-    height: 50px;
-    border: none;
-    box-shadow: 4px 5px 4px rgba(0,0,0,0.096);
-    border-radius: 25px;
-    font-family: 'Sarala', sans-serif;
-    font-weight: 400px;
-    font-size: 20px;
-    color: #ffffff;
-    cursor: pointer;
-}
 
-.botao:hover
-{
-    background-color: #edbb15;
-}
 
 input
 {
@@ -194,6 +208,26 @@ input
     background: #ffff;
 }
 
+.botao
+{
+    background-color: #627ABD;
+    width: 100px;
+    height: 50px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0,0,0,0.096);
+    border-radius: 25px;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400px;
+    font-size: 20px;
+    color: #ffffff;
+    cursor: pointer;
+    margin-top: 25px;
+}
+
+.botao:hover
+{
+    background-color: #93AAE8;
+}
 
 .img-logo-projeto
 {
@@ -204,12 +238,12 @@ input
 }
 .rodape
 {
-    border-top: 0.4px solid #ffffff;
+    border-top: 0.4px solid #627ABD;
     padding: 32px;
 }
 
 .desenvolvido{
-    color: #ffffff;
+    color: #627ABD;
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
     font-size: 10px;
@@ -218,8 +252,5 @@ input
     align-items: center;
 
 }
-.logo-rodape{
-    height: 48px;
-    display: block;
-    margin: 0 auto;
-}
+
+
