--- a/poo/css2/sistema.css
+++ b/poo/css2/sistema.css
@@ -1,66 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala&display=swap');
 
-*
-{
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   text-decoration: none;
 }
 
 body{
-    font-size: 100%;
-    background: linear-gradient(68.15deg, #EECC60, #FB6C34);
- }
+   font-size: 100%;
+   background: #E8C2DB;
+}
 
 
- body::-webkit-scrollbar
- {
-    width: 12px;
- }
- body::-webkit-scrollbar-track
- {
-    background: #FB6C34;
- }
- body::-webkit-scrollbar-thumb
- {
-    background-color: #EECC60;
-    border-radius: 10px;
-    border: 2px solid #EECC60 ;
- }
-
-
- .cabecalho{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    padding: 24px;
- }
-
- .logo
- {
-    height: 60px;
- }
-
- .navegacao
- {
-    display: flex;
-    gap: 32px;
- }
-.cabecalho-menu
+body::-webkit-scrollbar
 {
-    font-family: 'Sarala', sans-serif;
-    color: #ffffff		;
-    font-weight: 400px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 20px;
+   width: 12px;
+}
+body::-webkit-scrollbar-track
+{
+   background: #E8C2DB;
+}
+body::-webkit-scrollbar-thumb
+{
+   background-color: #FFF7EB;
+   border-radius: 10px;
+   border: 2px solid #FFF7EB ;
+}
+
+
+.cabecalho{
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-around;
+   padding: 24px;
+}
+
+.logo
+{
+   height: 60px;
+   border-radius: 100%;
+}
+
+.navegacao
+{
+   display: flex;
+   gap: 32px;
+
+}
+
+
+.cabecalho-menu{
+   font-family: 'Sarala', sans-serif;
+   color: #627ABD		;
+   font-weight: 400px;
+   font-size: 18px;
+   cursor: pointer;
+   transform: scale(1);
+   transition: transform 0.5s;
+}
+.cabecalho-menu:hover
+{
+  transform:scale(1.1)
+
 }
 
 .sair
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -78,13 +86,13 @@ body{
 
 .sair:hover
 {
-    background-color: #edbb15 ;
+    background-color: #93AAE8 ;
 }
 
 .conteudo
  {
     margin-bottom: 48px;
-    border-top: solid 0.4px #ffffff;
+    border-top: solid 0.4px #627ABD;
  }
 
  .conteudo-principal
@@ -105,7 +113,7 @@ body{
     font-family: 'Righteous', cursive;
     font-weight: 400px;
     font-size: 64px;
-    color:#ffffff;
+    color:#627ABD;
     margin: 20px;
 }
 .conteudo-principal-escrito-subtitulo
@@ -119,7 +127,7 @@ body{
 .texto-principal{
     font-family: 'Sarala', sans-serif;
     font-weight: 400px;
-    font-size: 18px;
+    font-size: 25px;
     line-height: 30px;
     padding: 20px;
     margin: 20px;
@@ -141,19 +149,17 @@ body{
     gap:24px;
     margin-top: 48px;
 }
-
 .conteudo-secundario-titulo
 {
-    border-top: 0.4px solid #ffffff;
+    border-top: 0.4px solid #627ABD;
     padding-top: 48px;
     font-family: 'Righteous', cursive;
     font-weight: 400px;
     font-size: 24px;
-    color: #ffffff;
+    color: #627ABD;
     margin-bottom: 16px;
 }
-
-.coisinhas
+.coisinhas-subtitulo
 {
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
