--- a/poo/css3/crud.css
+++ b/poo/css3/crud.css
@@ -1,24 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala&display=swap');
-
-*
-{
-    text-decoration: none;
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
     border: none;
-}
-
-body{
-    font-size: 100%;
-    background: linear-gradient(100deg, #EECC60, #FB6C34);
-
  }
-
-
- .logo
- {
-    height: 60px;
+ 
+ body{
+    font-size: 100%;
+    background: #E8C2DB;
  }
 
 
@@ -29,25 +19,39 @@ body{
     justify-content: space-around;
     padding: 24px;
  }
-
+ 
+ .logo
+ {
+    height: 60px;
+    border-radius: 100%;
+ }
+ 
  .navegacao
  {
     display: flex;
     gap: 32px;
+ 
  }
-.cabecalho-menu
-{
+ 
+ 
+ .cabecalho-menu{
     font-family: 'Sarala', sans-serif;
-    color: #ffffff		;
+    color: #627ABD		;
     font-weight: 400px;
     font-size: 18px;
     cursor: pointer;
-    margin: 20px;
-}
+    transform: scale(1);
+    transition: transform 0.5s;
+ }
+ .cabecalho-menu:hover
+ {
+   transform:scale(1.1)
+ 
+ }
 
 .sair
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -64,11 +68,11 @@ body{
 
 .sair:hover
 {
-    background-color: #edbb15;
+    background-color: #93AAE8;
 }
 .voltar
 {
-    background-color: #EECC60;
+    background-color: #627ABD;
     width: 80px;
     height: 40px;
     border: none;
@@ -81,6 +85,11 @@ body{
     cursor: pointer;
     position: absolute;
     left: 100px;
+}
+
+.voltar:hover
+{
+    background-color: #93AAE8;
 }
 .container
  {
