--- a/poo/estilo.css
+++ b/poo/estilo.css
@@ -152,7 +152,7 @@
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
     font-size: 18px;
-    color: #ffffff;
+    color: #627ABD;
 }
 
 .conteudo-secundario-paragrafo strong {
