--- a/poo/css/sobre.css
+++ b/poo/css/sobre.css
@@ -121,7 +121,7 @@ body{
     padding: 20px;
     margin: 20px;
     text-align: justify;
-    color: #ffffff;
+    color: #627ABD;
 }
 
 
@@ -156,7 +156,7 @@ body{
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
     font-size: 18px;
-    color: #ffffff;
+    color: #627ABD;
 }
 
 
