--- a/poo/css2/formParaAdotar.css
+++ b/poo/css2/formParaAdotar.css
@@ -144,7 +144,7 @@ body::-webkit-scrollbar-thumb
  #titulo-principal
  {
     font-family: 'Sarala', sans-serif;
-    color: #ffffff;
+    color: #627ABD;
     margin-left: 10%;
  }
 
