--- a/poo/css/cadastro.css
+++ b/poo/css/cadastro.css
@@ -146,7 +146,7 @@ input,textarea,select
 
 .campo label{
     margin-bottom: 0.2em;
-    color: #ffffff;
+    color: #627ABD;
     display: block;
 }
 
