--- a/poo/css/esqueceu_senha.css
+++ b/poo/css/esqueceu_senha.css
@@ -145,7 +145,7 @@ input,textarea,select
 
 .campo label{
     margin-bottom: 0.4em;
-    color: #ffffff;
+    color: #627ABD;
     display: block;
 }
 
