--- a/poo/css/sobre.css
+++ b/poo/css/sobre.css
@@ -55,6 +55,8 @@ body{
     font-size: 18px;
     cursor: pointer;
     margin: 20px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 .voltar
@@ -90,6 +92,7 @@ body{
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    
  }
  .conteudo-principal-escrito
  {
@@ -122,6 +125,8 @@ body{
     margin: 20px;
     text-align: justify;
     color: #627ABD;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 
@@ -194,4 +199,9 @@ body{
     flex-direction: column;
     align-items: center;
 
+}
+::selection
+{
+    background: #908c8e;
+    color: #ffffff;
 }
