--- a/poo/css2/sistema.css
+++ b/poo/css2/sistema.css
@@ -10,6 +10,8 @@
 body{
    font-size: 100%;
    background: #E8C2DB;
+   text-rendering: optimizeLegibility;
+   -webkit-font-smoothing: antialiased;
 }
 
 
