--- a/poo/css3/crud.css
+++ b/poo/css3/crud.css
@@ -158,7 +158,7 @@
 
 table
 {
-    border: 1px solid #fffbfb;
+    border: 1px solid #627ABD;
     border-collapse: collapse;
     margin: auto;
     padding: 30px;
@@ -168,11 +168,11 @@ table
 
 th {
     padding: 5px 10px;
-    border: 0.5px solid #fffbfb;
+    border: 0.5px solid #627ABD;
     text-align: center;
 
     margin: auto;
-    color: #fffbfb;
+    color: #627ABD;
     
     
     
@@ -180,10 +180,10 @@ th {
 td
 {
     padding:  5px 10px;
-    border: 0.5px solid #fffbfb;
+    border: 0.5px solid #627ABD;
     text-align: center;
     margin: auto;
-    color: #ffffff;
+    color: #627ABD;
 
 
 }
@@ -202,6 +202,10 @@ td
     margin: 5px;
     padding: 4px;
 }
+.editar:hover
+{
+    background: rgb(81, 220, 81);
+}
 .excluir
 {
     background: rgb(236, 70, 70);
@@ -215,5 +219,9 @@ td
     cursor: pointer;
     margin: 5px;
     padding: 4px;
+}
+.excluir:hover
+{
+    background: rgb(225, 104, 104);
 }
 
