--- a/poo/estilo.css
+++ b/poo/estilo.css
@@ -56,6 +56,8 @@
     color: #627ABD		;
     font-weight: 400px;
     font-size: 18px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
     cursor: pointer;
     transform: scale(1);
     transition: transform 0.5s;
@@ -92,13 +94,18 @@
     font-weight: 400px;
     font-size: 64px;
     color:#627ABD;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
+
 .conteudo-principal-escrito-subtitulo
 {
     font-family: 'Sarala', sans-serif;
     font-weight: 400px;
     font-size: 24px;
     color:#ffffff;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 .button-principal{
     background-color:#627ABD;
@@ -147,12 +154,16 @@
     font-size: 24px;
     color: #627ABD;
     margin-bottom: 16px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 .conteudo-secundario-paragrafo{
     font-family: 'Sarala', sans-serif;
     font-weight: 300px;
     font-size: 18px;
     color: #627ABD;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 .conteudo-secundario-paragrafo strong {
