--- a/poo/css/sobre.css
+++ b/poo/css/sobre.css
@@ -113,10 +113,11 @@ body{
     font-family: 'Sarala', sans-serif;
     font-weight: 400px;
     font-size: 24px;
-    color:#ffffff;
+    color:#627ABD   ;
     margin:20px;
 }
 .texto-principal{
+ 
     font-family: 'Sarala', sans-serif;
     font-weight: 400px;
     font-size: 25px;
@@ -127,6 +128,7 @@ body{
     color: #627ABD;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
+    margin: 10%;
 }
 
 
